# dns-interceptor

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  INSTALL-APT-FA.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  dns-interceptor_2.0.1_all.deb  dns_interceptor.py  install.sh  pyproject.toml
apt-repo/dists/stable/: Release
build-deb/DEBIAN/: control
dists/stable/: InRelease  Release.gpg
dists/stable/main/binary-amd64/: Packages
dns_interceptor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
keyring/: KEY.asc  dns-interceptor.gpg
packaging/deb/DEBIAN/: postinst
packaging/deb/usr/share/applications/: dns-interceptor.desktop
scripts/: build-deb.sh
